added font to last skill element

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="skill skill8 chaining">CSS</div>
           <div class="skill skill9 chaining">DBMS(MySQL, MongoDB)</div>
           <div class="skill skill1 chaining">Git & Github</div>
-          <div class="skill skill10 chaining last-skill-element"></div>
+          <div class="skill skill10 chaining last-skill-element">Cooking More...</div>
           <div class="wind">
             <div style="--i: 1" class="wind-element"></div>
             <div style="--i: 13" class="wind-element"></div>
